--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
             <div class="card">
                 <h1>Bem-vindos de volta às aulas!</h1>
                 <p> Estamos muito felizes em ter vocês de volta! preparem-se para um restante de ano incrível cheio de novas aventuras e aprendizados</p>
-                <img src=""
+                <img src="" alt="Volta às aula">
+                buton
             </div>
         </div>
     </body>
