--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
             <div class="card">
                 <h1>Bem-vindos de volta às aulas!</h1>
                 <p> Estamos muito felizes em ter vocês de volta! preparem-se para um restante de ano incrível cheio de novas aventuras e aprendizados</p>
-                <img src="" alt="Volta às aula">
-                buton
+                <img src="Volta-as-aulas.jpg" alt="Volta às aula">
+                <button>Vamos começar!</button>
             </div>
         </div>
+        <script scr="scripts.js"></script>
     </body>
-
 </html>
